tests/baselines/reference/parserSkippedTokens11.errors.txt
parserSkippedTokens11.ts(1,3): error TS1127: Invalid character.
parserSkippedTokens11.ts(1,5): error TS1127: Invalid character.
parserSkippedTokens11.ts(1,7): error TS1127: Invalid character.


==== parserSkippedTokens11.ts (3 errors) ====
    ; \ \ \ 
      
!!! error TS1127: Invalid character.
        
!!! error TS1127: Invalid character.
          
!!! error TS1127: Invalid character.